--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "mkdirp public/js && browserify client/js/app.js > public/js/bundle.js",
     "watch": "watchify client/js/app.js -o public/js/bundle.js",
     "test": "jest",
-    "start": "node index.js"
+    "start": "node index.js",
+    "postinstall": "mkdir -p public/js; browserify client/js/app.js > public/js/bundle.js"
   },
   "author": "Paul Dockery <paul.david.dockery@gmail.com>",
   "license": "MIT",
