--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Paul Dockery <paul.david.dockery@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "browserify": "^14.3.0",
     "express": "^4.15.2"
   },
   "devDependencies": {
